--- a/src/Muzich/CoreBundle/Resources/views/Email/checkmoderate.txt.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Email/checkmoderate.txt.twig
@@ -1,6 +1,7 @@
 {% autoescape false %}
   Il y a des choses a modérer:
   Elements: {{ elements }}.
+  Elements avec commentaires: {{ comments }}.
   Tags: {{ tags }}
   Page de modération: {{ url }}
 {% endautoescape %}
