Evolution #166: La recherche
Ajout de la recherche globale. Suppression de la recherche user et
groupe dans interface. Logique de recherche d'éléments pas encore intégré.

--- a/src/Muzich/UserBundle/Resources/views/Account/topBar.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Account/topBar.html.twig
@@ -1,5 +1,10 @@
 
 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+
+  <div id="top_search">
+    {% render "MuzichCoreBundle:Search:renderGlobalSearchForm" %}
+  </div>
+
   <div id="top_bar">
 
     <a href="{{ path('my_account') }}" >
@@ -11,4 +16,5 @@
     </a>
 
   </div>
+
 {% endif %}
