Evolution #166: La recherche
Intégration de la possibilité d'afficher les résultats éléments de la recherche global au fur et a mesure (afficher plus d'éléments).

--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -59,6 +59,7 @@
     url_add_tag = "{{ path('ajax_add_tag') }}";
     url_element_new_count = "{{ path('element_new_count') }}";
     url_element_new_get = "{{ path('element_new_get') }}";
+    url_global_search = "{{ path('global_search') }}";
     
     url_img_ajax_loader = "{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}";
   </script>
