--- a/src/Muzich/CoreBundle/Resources/views/GlobalSearch/results.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/GlobalSearch/results.html.twig
@@ -6,7 +6,9 @@
 
   {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with {'active': null} %}
   
-  {% include "MuzichCoreBundle:GlobalSearch:form.html.twig" with {'form': form } %}
+  <div id="results_search_form">
+    {% include "MuzichCoreBundle:GlobalSearch:form.html.twig" with {'form': form } %}
+  </div>
   
   {% if results.users|length or results.groups|length or results.elements|length %}
   
@@ -45,10 +47,18 @@
         'elements'          : results.elements
       }%}
       
+      {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
+        'display_more_button' : display_more_button,
+        'elements_length'     : results.elements|length,
+        'more_path'           : 'global_search_elements_empty'
+      }%}
+      
     {% endif %}
       
-  {% else %}
-      
+  {% elseif app.request.getMethod == 'POST' %}
+      <p>
+        {{ 'global_search.no_results'|trans({}, 'userui') }}
+      </p>
   {% endif %}
 
 {% endblock %}
