Anomalie #203: Afficher plus d'élément (n'apparait pas selon certains cas)
Solution choisis: Afficher tout le temps le bouton sur la page Le réseau.

--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -63,7 +63,7 @@
   }%}
     
   {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
-    'display_more_button' : display_more_button,
+    'display_more_button' : true,
     'elements_length'     : elements|length,
     'more_path'           : 'search_elements'
   }%}
