titre pour la recherche d'élèments

--- a/src/Muzich/CoreBundle/Resources/views/GlobalSearch/results.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/GlobalSearch/results.html.twig
@@ -41,6 +41,8 @@
     {% endif %}
   
     {% if results.elements %}
+
+      <b>{{ 'search.elements'|trans({}, 'network') }}</b>
       
       {% include "MuzichCoreBundle:SearchElement:default.html.twig" with {
         'noelements_filter' : true,
