Evolution #222: Demande de tags
Ajout de la possibilité de signaler l'élèment comme en demande de tags a l'ajout et a la modif (ou d'enlever).
test fonctionels

--- a/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
@@ -22,4 +22,10 @@
 
   {{ form_widget(form.tags, { 'attr': {'class': 'tagBox_tags_ids'} }) }}
 
+<div class="field">
+  {{ form_errors(form.need_tags) }}
+  {{ form_widget(form.need_tags) }}
+  {{ form_label(form.need_tags, 'element_add.need_tags.name'|trans({}, 'userui')) }}
+</div>
+
 {{ form_row(form._token) }}
