Evolution #357: Maj interface d'ajout
Modif partielle de l'interface d'ajout: champ url seul, avec bouton "ajouter"
Requete ajax qui récupère données des apis
reste a traiter ces données et afficher le reste du formulaire.

--- a/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
@@ -4,28 +4,35 @@
 
 <span class="help">{{ 'element_add.url.help'|trans({}, 'userui') }}</span>
 
-<div class="field">
+<div class="field fom_add_url">
   {{ form_errors(form.url) }}
-  {{ form_label(form.url, 'element_add.url.name'|trans({}, 'userui')) }}
-  {{ form_widget(form.url) }}
+  {{ form_widget(form.url, { 'attr': {
+    'placeholder': 'element_add.url.name'|trans({}, 'userui')},
+    'type': 'URL'
+  }) }}
+    
+  <a href="#" id="form_add_check_url" class="button">
+    {{ 'home.check_url'|trans({}, 'navigationui') }}
+  </a>
 </div>
 
-<div class="field">
-  {{ form_errors(form.name) }}
-  {{ form_label(form.name, 'element_add.name.name'|trans({}, 'userui')) }}
-  {{ form_widget(form.name) }}
-</div>
+<div class="form_add_second_part" style="display: none;">
+  <div class="field fom_add_name">
+    {{ form_errors(form.name) }}
+    {{ form_widget(form.name, { 'attr': {'placeholder': 'element_add.name.name'|trans({}, 'userui')} }) }}
+  </div>
 
-  {% include "MuzichCoreBundle:Tag:tagsPrompt.html.twig" with { 
-    'form_name'     : form_name
-  } %}
+    {% include "MuzichCoreBundle:Tag:tagsPrompt.html.twig" with { 
+      'form_name'     : form_name
+    } %}
 
-  {{ form_widget(form.tags, { 'attr': {'class': 'tagBox_tags_ids'} }) }}
+    {{ form_widget(form.tags, { 'attr': {'class': 'tagBox_tags_ids'} }) }}
 
-<div class="field">
-  {{ form_errors(form.need_tags) }}
-  {{ form_widget(form.need_tags) }}
-  {{ form_label(form.need_tags, 'element_add.need_tags.name'|trans({}, 'userui')) }}
+  <div class="field">
+    {{ form_errors(form.need_tags) }}
+    {{ form_widget(form.need_tags) }}
+    {{ form_label(form.need_tags, 'element_add.need_tags.name'|trans({}, 'userui')) }}
+  </div>
 </div>
 
 {{ form_row(form._token) }}
