Evolution #357: Maj interface d'ajout
Procédure complète en place.
reste de la finission ergonomique.

--- a/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
@@ -2,37 +2,72 @@
 
 {{ form_errors(form) }}
 
-<span class="help">{{ 'element_add.url.help'|trans({}, 'userui') }}</span>
+<div id="form_add_first_part">
 
-<div class="field fom_add_url">
-  {{ form_errors(form.url) }}
-  {{ form_widget(form.url, { 'attr': {
-    'placeholder': 'element_add.url.name'|trans({}, 'userui')},
-    'type': 'URL'
-  }) }}
+  <span class="help">{{ 'element_add.url.help'|trans({}, 'userui') }}</span>
+
+  <div class="field fom_add_url">
+    {{ form_errors(form.url) }}
+    {{ form_widget(form.url, { 'attr': {
+      'placeholder': 'element_add.url.name'|trans({}, 'userui')},
+      'type': 'URL'
+    }) }}
+
+    <a href="#" id="form_add_check_url" class="button">
+      {{ 'home.check_url'|trans({}, 'navigationui') }}
+    </a>
+
+
+    <img id="form_add_loader" class="tag_loader" style="display: none;" 
+      src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" 
+    />
+
+  </div>
     
-  <a href="#" id="form_add_check_url" class="button">
-    {{ 'home.check_url'|trans({}, 'navigationui') }}
-  </a>
 </div>
 
-<div class="form_add_second_part" style="display: none;">
-  <div class="field fom_add_name">
-    {{ form_errors(form.name) }}
-    {{ form_widget(form.name, { 'attr': {'placeholder': 'element_add.name.name'|trans({}, 'userui')} }) }}
-  </div>
+<div id="form_add_second_part" style="display: none;">
+  
+  <table>
+    <tr>
+      <td style="vertical-align: top;">
+        <div id="form_add_thumb">
+          <img src="{{ asset('bundles/muzichcore/img/nothumb.png') }}" />
+        </div>
+      </td>
+      <td style="vertical-align: top;">
+        <div class="field fom_add_name">
+          {{ form_errors(form.name) }}
+          {{ form_widget(form.name, { 'attr': {'placeholder': 'element_add.name.name'|trans({}, 'userui')} }) }}
+        </div>
 
-    {% include "MuzichCoreBundle:Tag:tagsPrompt.html.twig" with { 
-      'form_name'     : form_name
-    } %}
+          <p id="form_add_prop_tags_text" style="display: none;">
+            {{ 'element_add.prop_tags.text'|trans({}, 'userui') }}
+          </p>
+          <ul id="form_add_prop_tags" style="display: none;"></ul>
 
-    {{ form_widget(form.tags, { 'attr': {'class': 'tagBox_tags_ids'} }) }}
+          {% include "MuzichCoreBundle:Tag:tagsPrompt.html.twig" with { 
+            'form_name'     : form_name
+          } %}
 
-  <div class="field">
-    {{ form_errors(form.need_tags) }}
-    {{ form_widget(form.need_tags) }}
-    {{ form_label(form.need_tags, 'element_add.need_tags.name'|trans({}, 'userui')) }}
-  </div>
+          {{ form_widget(form.tags, { 'attr': {'class': 'tagBox_tags_ids'} }) }}
+
+        <div class="field">
+          {{ form_errors(form.need_tags) }}
+          {{ form_widget(form.need_tags) }}
+          {{ form_label(form.need_tags, 'element_add.need_tags.name'|trans({}, 'userui')) }}
+        </div>
+      </td>
+    </tr>
+  </table>
+  
+  
+  
+  
+  
+    
+  <input type="submit" value="Partager cette ressource" />
+    
 </div>
 
 {{ form_row(form._token) }}
