Evolution #222: Demande de tags
Ajout d'un onglet dans le menu
Affichage de la liste d'élèments en demande de tags
Mise a false de l'atrribu need_tags lorsque proposition de tags accepté

--- a/src/Muzich/CoreBundle/Resources/views/Menu/containerMenu.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Menu/containerMenu.html.twig
@@ -12,14 +12,19 @@
         {{ 'container_menu.my_network'|trans({}, 'navigationui') }}
       </a>
     </li>
-    <li {% if active == 'myfeeds' %} class="active" {% endif %}>
-      <a href="{{ path('show_user', {'slug': app.user.slug}) }}">
-        {{ 'container_menu.my_feeds'|trans({}, 'navigationui') }}
+    <li {% if active == 'needs-tags' %} class="active" {% endif %}>
+      <a href="{{ path('element_show_need_tags') }}">
+        {{ 'container_menu.need_tags'|trans({}, 'navigationui') }}
       </a>
     </li>
   </ul>
 
   <ul class="top-tabs-right">
+    <li {% if active == 'myfeeds' %} class="active" {% endif %}>
+      <a href="{{ path('show_user', {'slug': app.user.slug}) }}">
+        {{ 'container_menu.my_feeds'|trans({}, 'navigationui') }}
+      </a>
+    </li>
     <li class="{% if active == 'mygroups' %}active{% endif %}">
       <a href="{{ path('groups_own_list') }}" >
         {{ 'network.mygroups'|trans({}, 'navigationui') }}
