Evolution #375: Pages avec nuage de tags
Ne pas afficher tous les tags d'un coup (quand il y en a plus de x) et mettre un bouton cliquable pour les afficher tous
proposer un petit filtre textuel

--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagsList.favorite.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagsList.favorite.html.twig
@@ -1,16 +1,28 @@
 {% if tags|length %}
+
+  <label for="cloud_tags_filter" >{{ 'tags.cloud.filter.text'|trans({}, 'userui') }}</label>
+  <input type="text" id="cloud_tags_filter" />
+
   <input type="hidden" id="get_elements_url" value="{{ path('favorite_get', {
     'user_id': user_id, 
     'tags_ids_json' : ''
   }) }}" />
   <ul id="favorite_tags">
     {% for tag in tags %}
-      <li>
+      <li {% if loop.index0 > cloud_tags_limit_to_display %}style="display: none;"{% endif %}>
         <a id="filtering_tag_{{ tag.id }}" href="#" class="button tag">
           {{ tag.name }}
         </a>
       </li>
     {% endfor %}
   </ul>
+  
+  {% if tags|length > cloud_tags_limit_to_display %}
+  <div style="clear: both;"></div>
+    <a href="#" id="display_all_cloud_tag" >
+      {{ 'tags.cloud.display_more'|trans({}, 'userui') }}
+    </a>
+  {% endif %}
+  
   <div class="clearboth" ></div>
 {% endif %}
