--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -67,6 +67,7 @@
     url_element_new_get = "{{ path('element_new_get') }}";
     url_global_search = "{{ path('global_search') }}";
     url_datas_api = "{{ path('element_retrieve_api_datas') }}";
+    url_element_add = "{{ path('element_add') }}";
     
     url_img_ajax_loader = "{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}";
   </script>
