Evolution #351: V0.1 Extension firefox
Récupération du paramètre from_url sur l'action HomeController:index

--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -44,6 +44,19 @@
         'form'          : add_form, 
         'form_name'     : add_form_name
       } %}
+            
+    {% if from_url %}
+      <script type="text/javascript">
+        $(document).ready(function(){
+          $('#element_add_box').slideDown("slow");
+          $('#element_add_link').hide();
+          $('form[name="search"]').slideUp();
+          $('img#form_add_loader').show();
+          $('input#element_add_url').val("{{ from_url }}");
+          $('form[name="add"]').submit();
+        });
+      </script>
+    {% endif %}
 
     </form>
   </div>
