--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -893,6 +893,20 @@ ul#favorite_tags li
   float:left; /*pour IE*/
 }
 
+ul#favorite_tags li.list_length_big a.button
+{
+  font-size: 16px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+ul#favorite_tags li.list_length_medium a.button
+{
+  font-size: 15px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
 a.more
 {
   margin-top: 5px;
