Evolution #417: Réafficher l'url lors de l'ajout

--- a/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
@@ -22,6 +22,11 @@
 
 <div id="form_add_second_part" style="display: none;">
   
+  <span  id="add_url_title">
+    {{ 'element.add.url_title_step2'|trans({}, 'elements') }}:
+    <span id="add_url_title_url"></span>
+  </span>
+  
   <table>
     <tr>
       <td style="vertical-align: top;">
