Evolution #196: Liste de lecture
Mise en place librairie de récupération des elements a traiter
Partie js pour lecture auto

--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -90,6 +90,11 @@
     } %}
     
     <input class="main button" type="submit" value="{{ 'filter.submit'|trans({}, 'userui') }}"/>
+    
+    <a href="javascript:void(0);" class="button" id="autoplay_launch">
+      {{ 'elements.autoplay.launch'|trans({}, 'elements') }}
+    </a>
+    
   </form>
 
   <div class="display_more_elements" style="display: none;">
