--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -23,6 +23,10 @@
   {% endif %}
   <script src="{{ asset('js/jquery-ui-1.8.7.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/muzichcore/js/muzich.js') }}" type="text/javascript"></script>
+	
+  <script type="text/javascript" src="{{ asset('js/swfobject.js') }}"></script> 
+  <script src="{{ asset('bundles/muzichcore/js/autoplay.js') }}" type="text/javascript"></script>
+  
   <script src="{{ asset('js/tags/jquery.autoGrowInput.js') }}" type="text/javascript"></script>
   <script src="{{ asset('js/tags/jquery.tagBox.js') }}" type="text/javascript"></script>
   <script src="{{ asset('js/formdefault/jquery.formdefaults.js') }}" type="text/javascript"></script>
@@ -76,6 +80,28 @@
 </head>
 <body>
   
+  <div id="autoplay" class="popin_block" style="display: none;">
+    <a href="javascript:void(0);" id="autoplay_close" >
+      <img src="{{ asset('/bundles/muzichcore/img/1328276855_list-remove.png') }}" alt="close" />
+    </a>
+    <div id="autoplay_controls">
+      
+      <a href="javascript:void(0);" id="autoplay_previous">
+        <img src="{{ asset('/bundles/muzichcore/img/player_start.png') }}" alt="previous" />
+      </a>
+      <a href="javascript:void(0);" id="autoplay_next">
+        <img src="{{ asset('/bundles/muzichcore/img/player_end.png') }}" alt="next" />
+      </a>
+        
+      <div id="autoplay_title"></div>
+      
+    </div>
+    <div id="autoplay_player_container">
+      <div id="autoplay_player"></div>
+    </div>
+    <img id="autoplay_loader" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loader" />
+  </div>
+    
   {% include "MuzichCoreBundle:Language:languages.html.twig" %}
   
   {% include "MuzichUserBundle:Account:topBar.html.twig" %}
